added another moduel

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 				<div class="container">
 					<h1>JS modules!</h1>
 					<p>Contents ...</p>
-
+					<p id="statsModule">Peoples: {{nrPeoples}}</p>
 				</div>
 			</div>
 		</div>
@@ -85,6 +85,7 @@
     <link rel="stylesheet" type="text/css" href="custom.css"></link>
 
     <script src="./bower_components/mustache.js/mustache.min.js"></script>
+    <script type="text/javascript" src="statModule.js"></script>
     <script type="text/javascript" src="modularJS.js"></script>
 </body>
 </html>
