--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
     <link rel="stylesheet" type="text/css" href="custom.css"></link>
 
     <script src="./bower_components/mustache.js/mustache.min.js"></script>
-    <script type="text/javascript" src="statModule.js"></script>
+    <script type="text/javascript" src="events.js"></script>
+    <script type="text/javascript" src="statModule.js"></script>    
     <script type="text/javascript" src="modularJS.js"></script>
 </body>
 </html>
